# dineforecast

./: .env.example  .gitignore  DineForecast.postman_collection.json  README.md  conftest.py  pyproject.toml  requirements.txt
apps/feedback/: admin.py  models.py  serializers.py  services.py  urls.py  views.py
apps/feedback/migrations/: 0001_initial.py  0002_forecastaccuracy.py  0003_remove_forecastaccuracy_feedback_fo_date_903251_idx.py
apps/forecasting/: admin.py  cache.py  models.py  serializers.py  services.py  tasks.py  urls.py  views.py
apps/forecasting/migrations/: 0001_initial.py  0002_dishpopularity_staffrole_historicalcover.py  0003_alter_dishpopularity_average_orders_percentage_and_more.py
apps/forecasting/tests/: test_api_endpoints.py  test_feedback_loop.py  test_forecast_service.py  test_hourly_distribution.py  test_ingredient_forecast.py  test_ml_forecast.py  test_staff_planning.py  test_tasks.py
apps/operations/: admin.py  models.py  serializers.py  urls.py  views.py
apps/operations/migrations/: 0001_initial.py  0002_ingredient_shift_operations__shift_d_98ddcf_idx_and_more.py  0003_rename_per_dish_quantity_ingredient_default_quantity_per_dish.py
config/: celery.py  settings.py  urls.py
core/: choices.py  exceptions.py  permissions.py
dummy_data/: dish_popularity.csv  historical_cover.csv  ingredient.csv  staff_role.csv
