[project]
name = "dineforecast"
version = "0.1.0"
description = "Restaurant resource planning system"
authors = [
    {name = "Abhishek05454"}
]
readme = "README.md"
requires-python = ">=3.12,<4"
dependencies = [
    "django==5.0.4",
    "djangorestframework==3.15.1",
    "psycopg2-binary==2.9.9",
    "python-decouple==3.8",
    "djangorestframework-simplejwt==5.3.1",
    "django-cors-headers==4.3.1",
    "Pillow==10.3.0",
    "django-filter==24.2",
    "redis==5.0.4",
    "django-redis==5.4.0",
    "celery==5.3.6",
    "gunicorn==22.0.0",
]

[project.optional-dependencies]
ml = [
    "scikit-learn==1.8.0",
]

[dependency-groups]
dev = [
    "pytest==8.2.0",
    "pytest-django==4.8.0",
    "factory-boy==3.3.0",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["tests.py", "test_*.py", "*_test.py"]
